--- a/DoorGPT.html
+++ b/DoorGPT.html
@@ -46,27 +46,35 @@
 
 <div class="container">
   <h1 style="color: #333;">Welcome to the Door Game</h1>
-  <p style="color: #333;">Choose one of the three doors below:</p>
+  <p style="color: #333;">Choose one of the five doors below:</p>
   <button class="button" onclick="chooseDoor(1)" id="door1">Door 1</button>
   <button class="button" onclick="chooseDoor(2)" id="door2">Door 2</button>
   <button class="button" onclick="chooseDoor(3)" id="door3">Door 3</button>
+  <button class="button" onclick="chooseDoor(4)" id="door4">Door 4</button>
+  <button class="button" onclick="chooseDoor(5)" id="door5">Door 5</button>
   <p id="result" style="color: #333;"></p>
   <p id="score" style="color: #333;">Score: 0</p>
   <h2 style="color: #333;">Items:</h2>
-  <button id="hint" class="button hintButton" onclick="findHint()">Find Hint</button>
-  <button class="button" onclick="useMagnifyingGlass()">Magnifying Glass</button>
-  <button class="button" onclick="useKnife()">Knife</button>
-  <button class="button" onclick="useBeer()">Beer</button>
-  <button class="button" onclick="useKey()">Key</button>
-  <button class="button" onclick="useMap()">Map</button>
-  <button class="button" onclick="useFlashlight()">Flashlight</button>
+  <button id="hint" class="button hintButton" onclick="findHint()">Find Hint (3 uses)</button>
+  <button class="button" onclick="useMagnifyingGlass()">Magnifying Glass (2 uses)</button>
+  <button class="button" onclick="useKnife()">Knife (1 use)</button>
+  <button class="button" onclick="useBeer()">Beer (3 uses)</button>
+  <button class="button" onclick="useKey()">Key (1 use)</button>
+  <button class="button" onclick="useMap()">Map (2 uses)</button>
+  <button class="button" onclick="useFlashlight()">Flashlight (1 use)</button>
   <button class="button" onclick="restart()">Restart</button>
 </div>
 
 <script>
-  var hintCount = 0;
+  var hintCount = 3;
+  var magnifyingGlassCount = 2;
+  var knifeCount = 1;
+  var beerCount = 3;
+  var keyCount = 1;
+  var mapCount = 2;
+  var flashlightCount = 1;
   var alive = true;
-  var correctDoors = [1, 2, 3];
+  var correctDoors = [];
   var score = 0;
 
   function shuffle(array) {
@@ -81,99 +89,100 @@
 
   function chooseDoor(selectedDoor) {
     if (!alive) return;
-    correctDoors = shuffle(correctDoors);
-    var randomNumber = Math.floor(Math.random() * 10); // Random number between 0 and 9
+    correctDoors = shuffle([1, 2, 3, 4, 5]);
+    var randomNumber = Math.floor(Math.random() * 100); // Random number between 0 and 99
     if (randomNumber === 0) {
-      document.getElementById("result").textContent = "Hint: Door " + selectedDoor + " is correct!";
+      // Random item found behind the door
+      var items = ["Magnifying Glass", "Knife", "Beer", "Key", "Map", "Flashlight"];
+      var randomItem = items[Math.floor(Math.random() * items.length)];
+      alert("You found a " + randomItem + " behind Door " + selectedDoor + "!");
+    }
+    if (correctDoors.slice(0, 3).includes(selectedDoor)) {
+      document.getElementById("result").textContent = "You passed! Choose another door.";
+      score++;
+      document.getElementById("score").textContent = "Score: " + score;
     } else {
-      if (selectedDoor === correctDoors[0]) {
-        document.getElementById("result").textContent = "You passed! Choose another door.";
-        score++;
-        document.getElementById("score").textContent = "Score: " + score;
-      } else {
-        document.getElementById("result").textContent = "Game over! You picked the wrong door.";
-        alive = false;
-        for (var i = 0; i < 5; i++) {
-          alert("FIRE IN THE HOLE!");
-        }
+      document.getElementById("result").textContent = "Game over! You picked the wrong door.";
+      alive = false;
+      for (var i = 0; i < 5; i++) {
+        alert("FIRE IN THE HOLE!");
       }
     }
     updateButtonsState();
   }
 
   function findHint() {
-    hintCount++;
-    document.getElementById("hint").textContent = "Find Hint (" + hintCount + ")";
+    if (hintCount > 0) {
+      hintCount--;
+      document.getElementById("hint").textContent = "Find Hint (" + hintCount + " uses left)";
+      // Add functionality for using hint here
+      alert("You found a hint!");
+    }
   }
 
   function useMagnifyingGlass() {
-    if (!alive) return;
-    // Add functionality for using magnifying glass here
-    alert("Magnifying Glass used! You see a clue on Door 3.");
-    document.getElementById("result").textContent = "Hint: Door 3 is correct!";
+    if (magnifyingGlassCount > 0) {
+      magnifyingGlassCount--;
+      // Add functionality for using magnifying glass here
+      alert("Magnifying Glass used! You see a clue.");
+    }
   }
 
   function useKnife() {
-    if (!alive) return;
-    // Add functionality for using knife here
-    alert("Knife used! You find a hidden passage behind Door 2.");
-    document.getElementById("result").textContent = "You passed! Choose another door.";
-    score++;
-    document.getElementById("score").textContent = "Score: " + score;
+    if (knifeCount > 0) {
+      knifeCount--;
+      // Add functionality for using knife here
+    alert("Knife used! You find a hidden passage.");
+    }
   }
 
   function useBeer() {
-    if (!alive) return;
-    // Add functionality for using beer here
-    alert("Beer used! It gives you strength to push open Door 1.");
-    document.getElementById("result").textContent = "You passed! Choose another door.";
-    score++;
-    document.getElementById("score").textContent = "Score: " + score;
+    if (beerCount > 0) {
+      beerCount--;
+      // Add functionality for using beer here
+      alert("Beer used! It gives you strength to push open a door.");
+    }
   }
 
   function useKey() {
-    if (!alive) return;
-    // Add functionality for using key here
-    alert("Key used! You unlock Door 2.");
-    document.getElementById("result").textContent = "You passed! Choose another door.";
-    score++;
-    document.getElementById("score").textContent = "Score: " + score;
+    if (keyCount > 0) {
+      keyCount--;
+      // Add functionality for using key here
+      alert("Key used! You unlock a door.");
+    }
   }
 
   function useMap() {
-    if (!alive) return;
-    // Add functionality for using map here
-    alert("Map used! You find a hidden room with treasure behind Door 3.");
-    document.getElementById("result").textContent = "You passed! Choose another door.";
-    score++;
-    document.getElementById("score").textContent = "Score: " + score;
+    if (mapCount > 0) {
+      mapCount--;
+      // Add functionality for using map here
+      alert("Map used! You find a hidden room with treasure.");
+    }
   }
 
   function useFlashlight() {
-    if (!alive) return;
-    // Add functionality for using flashlight here
-    alert("Flashlight used! You find a key under Door 1.");
-    document.getElementById("result").textContent = "You passed! Choose another door.";
-    score++;
-    document.getElementById("score").textContent = "Score: " + score;
+    if (flashlightCount > 0) {
+      flashlightCount--;
+      // Add functionality for using flashlight here
+      alert("Flashlight used! You find a way through the dark.");
+    }
   }
 
   function restart() {
-    hintCount = 0;
-    document.getElementById("hint").textContent = "Find Hint";
+    hintCount = 3;
+    magnifyingGlassCount = 2;
+    knifeCount = 1;
+    beerCount = 3;
+    keyCount = 1;
+    mapCount = 2;
+    flashlightCount = 1;
+    correctDoors = [];
+    alive = true;
+    score = 0;
+    document.getElementById("hint").textContent = "Find Hint (3 uses)";
     document.getElementById("result").textContent = "";
     document.getElementById("score").textContent = "Score: 0";
-    score = 0;
-    alive = true;
-    enableAllButtons();
     updateButtonsState();
-  }
-
-  function enableAllButtons() {
-    var buttons = document.getElementsByClassName("button");
-    for (var i = 0; i < buttons.length; i++) {
-      buttons[i].disabled = false;
-    }
   }
 
   function updateButtonsState() {
