--- a/DoorGPT.html
+++ b/DoorGPT.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Door Game</title>
+  <title>Door Game Made by ChatGPT</title>
   <style>
     body {
       font-family: Arial, sans-serif;
